layout/generic/nsGfxScrollFrame.cpp
@@ -7936,8 +7936,7 @@ nsMargin ScrollFrameHelper::GetScrollPadding() const {
                                    GetScrollPortRect().Size());
 }
 
-layers::ScrollSnapInfo ScrollFrameHelper::ComputeScrollSnapInfo(
-    SnapTargetSet* aSnapTargets) {
+layers::ScrollSnapInfo ScrollFrameHelper::ComputeScrollSnapInfo() {
   ScrollSnapInfo result;
 
   nsIFrame* scrollSnapFrame = GetFrameForStyle();
@@ -7961,7 +7960,7 @@ layers::ScrollSnapInfo ScrollFrameHelper::ComputeScrollSnapInfo(
   result.mSnapportSize = snapport.Size();
   CollectScrollPositionsForSnap(mScrolledFrame, mScrolledFrame,
                                 GetScrolledRect(), scrollPadding, writingMode,
-                                result, aSnapTargets);
+                                result, &mSnapTargets);
   return result;
 }
 
@@ -7974,14 +7973,14 @@ Maybe<SnapTarget> ScrollFrameHelper::GetSnapPointForDestination(
     ScrollUnit aUnit, ScrollSnapFlags aFlags, const nsPoint& aStartPos,
     const nsPoint& aDestination) {
   // We can release the strong references for the previous snap target
-  // elements here since calling this ComputeScrollSnapInfo with
-  // |aSnapTargets| means we are going to evaluate new snap points, thus
-  // there's no chance to generating nsIContent instances in between this
-  // function call and the function call for the (re-)evaluation.
+  // elements here since calling this ComputeScrollSnapInfo means we are going
+  // to evaluate new snap points, thus there's no chance to generating
+  // nsIContent instances in between this function call and the function call
+  // for the (re-)evaluation.
   mSnapTargets.Clear();
   return ScrollSnapUtils::GetSnapPointForDestination(
-      ComputeScrollSnapInfo(&mSnapTargets), aUnit, aFlags,
-      GetLayoutScrollRange(), aStartPos, aDestination);
+      ComputeScrollSnapInfo(), aUnit, aFlags, GetLayoutScrollRange(), aStartPos,
+      aDestination);
 }
 
 Maybe<SnapTarget> ScrollFrameHelper::GetSnapPointForResnap() {
@@ -7991,8 +7990,8 @@ Maybe<SnapTarget> ScrollFrameHelper::GetSnapPointForResnap() {
   nsIContent* focusedContent =
       mOuter->GetContent()->GetComposedDoc()->GetUnretargetedFocusedContent();
   return ScrollSnapUtils::GetSnapPointForResnap(
-      ComputeScrollSnapInfo(&mSnapTargets), GetLayoutScrollRange(),
-      GetScrollPosition(), mLastSnapTargetIds, focusedContent);
+      ComputeScrollSnapInfo(), GetLayoutScrollRange(), GetScrollPosition(),
+      mLastSnapTargetIds, focusedContent);
 }
 
 bool ScrollFrameHelper::NeedsResnap() {
